<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/container"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/line" />


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="5" />

    <ImageView
        android:id="@+id/iv_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@+id/ivBackground"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toTopOf="@+id/ivBackground"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/favorite_20px" />

    <TextView
        android:id="@+id/tvChannelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center|center_horizontal"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="0.8" />

    <ImageView
        android:id="@+id/ivPlay"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/pauseicon"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="@+id/ivBackground"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        app:layout_constraintVertical_bias="0.5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loading_animation"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/ivPlay"
        app:layout_constraintEnd_toEndOf="@id/ivPlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/ivPlay"
        app:layout_constraintTop_toTopOf="@id/ivPlay"
        app:layout_constraintVertical_bias="0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading2" />
</androidx.constraintlayout.widget.ConstraintLayout>